fix z-index layers between main nav and mobile sidenav

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,9 @@
 nav {
     position: fixed;
+    z-index: 9000;
+}
+
+.sidenav {
     z-index: 9999;
 }
 
